; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_handle_grep_syntax.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_handle_grep_syntax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_SORT_TIME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"refs/*\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i32*, i8*)* @handle_grep_syntax to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_grep_syntax(i32** %0, i32* %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32* null, i32** %11, align 8
  %13 = load i8*, i8** %9, align 8
  %14 = call i32 @build_regex(i32* %10, i8* %13)
  store i32 %14, i32* %12, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %4
  %17 = load i32, i32* %12, align 4
  store i32 %17, i32* %5, align 4
  br label %51

18:                                               ; preds = %4
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @git_revwalk_new(i32** %11, i32* %19)
  store i32 %20, i32* %12, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  br label %46

23:                                               ; preds = %18
  %24 = load i32*, i32** %11, align 8
  %25 = load i32, i32* @GIT_SORT_TIME, align 4
  %26 = call i32 @git_revwalk_sorting(i32* %24, i32 %25)
  %27 = load i32*, i32** %8, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %35

29:                                               ; preds = %23
  %30 = load i32*, i32** %11, align 8
  %31 = call i32 @git_revwalk_push_glob(i32* %30, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 %31, i32* %12, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %29
  br label %46

34:                                               ; preds = %29
  br label %42

35:                                               ; preds = %23
  %36 = load i32*, i32** %11, align 8
  %37 = load i32*, i32** %8, align 8
  %38 = call i32 @git_revwalk_push(i32* %36, i32* %37)
  store i32 %38, i32* %12, align 4
  %39 = icmp slt i32 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %35
  br label %46

41:                                               ; preds = %35
  br label %42

42:                                               ; preds = %41, %34
  %43 = load i32**, i32*** %6, align 8
  %44 = load i32*, i32** %11, align 8
  %45 = call i32 @walk_and_search(i32** %43, i32* %44, i32* %10)
  store i32 %45, i32* %12, align 4
  br label %46

46:                                               ; preds = %42, %40, %33, %22
  %47 = call i32 @git_regexp_dispose(i32* %10)
  %48 = load i32*, i32** %11, align 8
  %49 = call i32 @git_revwalk_free(i32* %48)
  %50 = load i32, i32* %12, align 4
  store i32 %50, i32* %5, align 4
  br label %51

51:                                               ; preds = %46, %16
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

declare dso_local i32 @build_regex(i32*, i8*) #1

declare dso_local i32 @git_revwalk_new(i32**, i32*) #1

declare dso_local i32 @git_revwalk_sorting(i32*, i32) #1

declare dso_local i32 @git_revwalk_push_glob(i32*, i8*) #1

declare dso_local i32 @git_revwalk_push(i32*, i32*) #1

declare dso_local i32 @walk_and_search(i32**, i32*, i32*) #1

declare dso_local i32 @git_regexp_dispose(i32*) #1

declare dso_local i32 @git_revwalk_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
